--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -23,11 +23,12 @@
         <h1>JavaScript</h1>
         <p>
             JavaScript (JS) is an incredibly widespread and popular
-            programming language that is present in most of the
+            programming language that is used in most of the
             websites you have ever visited. JS allows for greater
             interactivity with the user of a website, including things
-            we take for granted in websites today, like playing audio,
-            playing video, animating certain elements, and even drop-down
+            we take for granted in websites today, like
+            playing video, animating certain elements, changing elements of the html page according to the actions of
+            the user, like clicking on a button, and even drop-down
             menus! The language is easy to get started with and is
             used in both front and back-end development professionally.
         </p>
@@ -72,10 +73,10 @@
     <section class="section-1">
         <p>
             Throughout this course, you will see code snippets like the example below.
-            Highlighted code will be used to represent code that will be written in that
-            step. Ellipses will be used to show that there is code not shown between the
+            Highlighted code will be used to represent code that will be added in that
+            step. Ellipses will be used to show that there is code not shown between the shown
             code snippets. You can scroll horizontally if you can't see all the code.
-            You can safely copy and paste the code, but I recommend writing
+            You can copy and paste the code, but I recommend writing
             all of it out. Remember: <b>The best way to learn to code is by coding and trying
                 things out yourself</b>.
         </p>
@@ -83,15 +84,15 @@
 
     <section class="code">
         <pre>
-            <code>let playerScore = 0; </code>
-            <code>let opponentScore = 0; </code>
-            <p>...</p>
-            <code class="hl">function drawScore() { </code>
-            <code class="hl">   context.font = "64px Courier New"; </code>
-            <code class="hl">   context.textAlign = "center"; </code>
-            <code class="hl">   context.fillStyle = "e0e0e0"; </code>
-            <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
-            <code class="hl">}</code>
+        <code>let playerScore = 0; </code>
+        <code>let opponentScore = 0; </code>
+        <p>...</p>
+        <code class="hl">function drawScore() { </code>
+        <code class="hl">   context.font = "64px Courier New"; </code>
+        <code class="hl">   context.textAlign = "center"; </code>
+        <code class="hl">   context.fillStyle = "#e0e0e0"; </code>
+        <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
+        <code class="hl">}</code>
         </pre>
     </section>
 
@@ -106,12 +107,12 @@
             <li><a href="js3.html">Lesson 2</a></li>
             <li><a href="js4.html">Lesson 3</a></li>
             <li><a href="js5.html">Lesson 4</a></li>
-            <li><a href="js6.html">Lesson 5</a></li>
-            <li><a href="js7.html">Lesson 6</a></li>
-            <li><a href="js8.html">Lesson 7</a></li>
-            <li><a href="js9.html">Lesson 8</a></li>
-            <li><a href="js10.html">Lesson 9</a></li>
-            <li><a href="js11.html">Lesson 10</a></li>
+            <li><a href="js6.html">Game 1</a></li>
+            <li><a href="js7.html">Game 2</a></li>
+            <li><a href="js8.html">Game 3</a></li>
+            <li><a href="js9.html">Game 4</a></li>
+            <li><a href="js10.html">Game 5</a></li>
+            <li><a href="js11.html">Game 6</a></li>
         </ul>
     </nav>
 
