--- a/javascript/js2.html
+++ b/javascript/js2.html
@@ -37,10 +37,10 @@
         <img src="jsimages/TextEdit2.png" alt="Display html files as html code">
 
         <p>
-            Set up the basic html of a webpage and save the file as with the extension <code>.html</code>. Write the
-            JavaScript code between the <code>&lt;script&gt; &lt;/script&gt;</code> tags. I recommend saving this to
-            your desktop, or somewhere other than the default TextEdit iCloud location. You can now open this html file
-            in a browser. Do <code>right click &gt; Open with</code> to choose with browser to use. To continue editing
+            Set up the basic html of a webpage and save the file with the extension <code>.html</code>. Write the
+            JavaScript code between the <code>&lt;script&gt; &lt;/script&gt;</code> tags. You can now open this html
+            file
+            in a browser. Do <code>right click &gt; Open with</code> to choose which browser to use. To continue editing
             the file, right click it, then <code>Open with &gt; TextEdit</code>.
         </p>
 
@@ -52,14 +52,17 @@
 
         <p>
             On windows you can use the default Notepad app or download Notepad++. Save the file with the extension
-            <code>.html</code>. Double click to open the file or right click and use <code>Open with</code> to choose
-            with browser to use. Here is some example code:
+            <code>.html</code>. Double click to open the file in a browser or right click and use <code>Open with</code>
+            to choose
+            which browser to use. Here is some example code:
         </p>
 
         <img src="jsimages/windowsnotepad.JPG" alt="Image of a basic html file with a script tag">
-
         <p>
-            <br>
+            Write JS code between the <code>&lt;script&gt; &lt;/script&gt;</code> tags
+        </p>
+        <hr>
+        <p>
             Opening the example html file in a browser should look like this:
         </p>
 
@@ -87,17 +90,17 @@
             JS in this course. You don't have to use it to learn the basics, but it will be useful for larger projects.
         </p>
 
-        <p>Download VS Code from this link: <a href="https://code.visualstudio.com/"
-                target="_blank" rel="noopener">https://code.visualstudio.com/</a>.
+        <p>Download VS Code from this link: <a href="https://code.visualstudio.com/" target="_blank"
+                rel="noopener">https://code.visualstudio.com/</a>.
         </p>
         <p>
             Get further information on the functionality of the program at this link: <a
-                href="https://code.visualstudio.com/docs/setup/setup-overview"
-                target="_blank" rel="noopener">https://code.visualstudio.com/docs/setup/setup-overview</a>.
+                href="https://code.visualstudio.com/docs/setup/setup-overview" target="_blank"
+                rel="noopener">https://code.visualstudio.com/docs/setup/setup-overview</a>.
         </p>
         <p>
             When you download and open the program, you will see a welcome page. I recommend playing around with some
-            settings and themes you like. Getting used to any IDE takes time, so don’t be afraid to look things up that
+            settings and themes you like. Getting used to any IDE takes time, so don’t be afraid to look up things that
             you don’t understand.
         </p>
         <p>
@@ -117,9 +120,10 @@
             writing with.
         </p>
         <p>
-            Name another new file <code>index.html</code> and press enter. Write some basic html in the file to set up
+            Name another new file <code>index.html</code>. Write some basic html in the file to set up
             the page. The important line for running JS is the <code>&lt;script src =
-                “JSExample.js”&gt;&lt;/script&gt;</code> line. This runs the JSExample.js file on the html page. You
+                “JSExample.js”&gt;&lt;/script&gt;</code> line. This runs the <code>JSExample.js</code> file on the html
+            page. You
             could also write regular JS between the tags without an external file
         </p>
         <img src="jsimages/html4.png" alt="image of basic html page">
@@ -131,15 +135,15 @@
         <img src="jsimages/html3.png" alt="image of the html file with the console open">
         <p>
             You can also write JavaScript directly in the Console. Try entering <code>console.log(“Hello There”);</code>
-            in the console. You should see “Hello There” appear in the console.
+            in the console. You should see “Hello There” appear in the console as output.
         </p>
 
         <hr class="hr-1">
-
+        <h3>Recommendation:</h3>
         <p>
-            Recommendation: <br>
-            On VS Code, download the extension “Live Server”. Right click on the html file <code>&gt; Open with Live
-                Server</code> or click the button on the bottom right to
+            I recommend downloading the extension “Live Server” for VS Code. Right click on the html file <code>&gt;
+                Open with Live
+                Server</code> or click the live server button on the bottom right to
             use the extension. This opens the file in a way such that the browser will update with code
             changes without you needing to refresh it. It updates on save. You may want to change your settings to "Save
             on delay" for updates without you having to manually save. This isn’t necessary, but it is more
@@ -160,12 +164,12 @@
             <li><a href="js3.html">Lesson 2</a></li>
             <li><a href="js4.html">Lesson 3</a></li>
             <li><a href="js5.html">Lesson 4</a></li>
-            <li><a href="js6.html">Lesson 5</a></li>
-            <li><a href="js7.html">Lesson 6</a></li>
-            <li><a href="js8.html">Lesson 7</a></li>
-            <li><a href="js9.html">Lesson 8</a></li>
-            <li><a href="js10.html">Lesson 9</a></li>
-            <li><a href="js11.html">Lesson 10</a></li>
+            <li><a href="js6.html">Game 1</a></li>
+            <li><a href="js7.html">Game 2</a></li>
+            <li><a href="js8.html">Game 3</a></li>
+            <li><a href="js9.html">Game 4</a></li>
+            <li><a href="js10.html">Game 5</a></li>
+            <li><a href="js11.html">Game 6</a></li>
         </ul>
     </nav>
 
