--- a/javascript/js6.html
+++ b/javascript/js6.html
@@ -27,9 +27,10 @@
         </p>
         <hr class="hr-1">
         <p>
-            We will now be using all the knowledge you now have of JavaScript to make a simple game that you can run in
-            your browser! We will be using pure JavaScript for this game, but you can later learn about frameworks that
-            you can use to help making them. The game will consist of two paddles passing a ball between each other. You
+            We will now be using all the knowledge you have of JavaScript to make a simple game that you can run in
+            your browser! We will be using pure JavaScript for this game, but you can later learn about frameworks with
+            pre-written useful functions that
+            you can use to help make them. The game will consist of two paddles passing a ball between each other. You
             control one paddle and earn points by getting the ball past the other paddle, which will move on its own.
             The game is over when the opponent has 10 points. The game will look something like this:
         </p>
@@ -54,42 +55,46 @@
         <p>Create a file called <code>index.html</code> and set it up like this: </p>
         <section class="code">
             <pre>
-                <code>&lt;!DOCTYPE html&gt;</code>
-                <code>&lt;html&gt;</code>
-                <code>&lt;head&gt;</code>
-                <code>    &lt;meta charset="utf-8"/&gt; </code>
-                <code>    &lt;title&gt;game&lt;/title&gt;</code>
-                <code>    &lt;style&gt;</code>
-                <code>        canvas { background: #202020; display: block; margin: 0 auto; }</code>
-                <code>    &lt;/style&gt;</code>
-                <code>&lt;/head&gt;</code>
-                <code>&lt;body&gt;</code>
-                <code></code>
-                <code>&lt;canvas id="gameCanvas" width="800" height="600"&gt;</code>
-                <code>    &lt;script src="game.js"&gt;&lt;/script&gt;</code>
-                <code>&lt;/body&gt;</code>
-                <code>&lt;/html&gt;</code>
+        <code>&lt;!DOCTYPE html&gt;</code>
+        <code>&lt;html&gt;</code>
+        <code>&lt;head&gt;</code>
+        <code>    &lt;meta charset="utf-8"/&gt; </code>
+        <code>    &lt;title&gt;game&lt;/title&gt;</code>
+        <code>    &lt;style&gt;</code>
+        <code>        canvas { background: #202020; display: block; margin: 0 auto; }</code>
+        <code>    &lt;/style&gt;</code>
+        <code>&lt;/head&gt;</code>
+        <code>&lt;body&gt;</code>
+        <code></code>
+        <code>&lt;canvas id="gameCanvas" width="800" height="600"&gt;</code>
+        <code>    &lt;script src="game.js"&gt;&lt;/script&gt;</code>
+        <code>&lt;/body&gt;</code>
+        <code>&lt;/html&gt;</code>
             </pre>
         </section>
         <p>
             The canvas CSS sets the background to gray and centers the canvas on the screen. The canvas is 800px wide
-            and 600px high. The JavaScript used will be stored in the game.js file, which we will now create. If you
-            open the index.html file in the browser now, it should look like this:
+            and 600px high. Our JavaScript will be stored in a file called <code>game.js</code>, which we will now
+            create. If you
+            open the <code>index.html</code> file in the browser now, it should look like this:
         </p>
         <img src="jsimages/game1.png" alt="">
         <p>
-            Create a file called "game.js" in the same folder as the index.html file. To actually start drawing on the
+            Create a file called "<code>game.js</code>" in the same folder as the <code>index.html</code> file. To
+            actually start
+            drawing on the
             canvas, we need to create a variable storing the canvas and the context. To do so, add these lines of code
-            at the beginning of the game.js file:
+            at the beginning of the <code>game.js</code> file:
         </p>
         <section class="code">
             <pre>
-            <code>let canvas = document.getElementById("gameCanvas");</code>
-            <code>let context = canvas.getContext("2d");</code>
+        <code>let canvas = document.getElementById("gameCanvas");</code>
+        <code>let context = canvas.getContext("2d");</code>
             </pre>
         </section>
         <p>
-            With this, we get declare the canvas variable getting the element with id <code>"gameCanvas"</code>, which
+            With this, we get declare the <code>canvas</code> variable getting the element with id
+            <code>"gameCanvas"</code>, which
             is what I named my canvas in the html file. Whatever you call your canvas, make your you write the correct
             id string in the <code>getElementByID</code> function. We need to get the 2d context of the canvas in order
             to actually draw on it. <code></code>
@@ -101,12 +106,12 @@
         </p>
         <section class="code">
             <pre>
-                <code>// draws a white rectangle</code>
-                <code>context.beginPath();</code>
-                <code>context.rect(50, 50, 100, 100);</code>
-                <code>context.fillStyle = "#ffffff";</code>
-                <code>context.fill();</code>
-                <code>context.closePath();</code>
+        <code>// draws a white rectangle</code>
+        <code>context.beginPath();</code>
+        <code>context.rect(50, 50, 100, 100);</code>
+        <code>context.fillStyle = "#ffffff";</code>
+        <code>context.fill();</code>
+        <code>context.closePath();</code>
             </pre>
         </section>
         <p>
@@ -122,22 +127,23 @@
             0), so the x value increases to the right and becomes negative to the left of the canvas, and the y value
             increases downward and becomes negative above the canvas.
         </p>
-        <img src="jsimages/game3.png" alt="">
+        <img src="jsimages/game3-1.png" alt="">
         <p>
             You can also draw a circle like this:
         </p>
         <section class="code">
             <pre>
-            <code>// draws a white circle</code>
-            <code>context.beginPath();</code>
-            <code>context.arc(200, 200, 10, 0, Math.PI * 2);</code>
-            <code>context.fillStyle = "#ffffff";</code>
-            <code>context.fill();</code>
-            <code>context.closePath();</code>
+        <code>// draws a white circle</code>
+        <code>context.beginPath();</code>
+        <code>context.arc(200, 200, 10, 0, Math.PI * 2);</code>
+        <code>context.fillStyle = "#ffffff";</code>
+        <code>context.fill();</code>
+        <code>context.closePath();</code>
             </pre>
         </section>
         <p>
-            The parameters for the arc function in order are the x coordinate of the center of the arc, the y coordinate
+            The parameters for the arc function in order are: the x coordinate of the center of the arc, the y
+            coordinate
             of the center, the radius, the starting angle in radians, the ending angle in radians, (and another optional
             parameter that determines direction to draw the arc, not used here). Since this arc starts at 0 radians and
             ends at 2 PI radians, it actually draws an entire circle, so the direction of the arc is irrelevant.
@@ -145,14 +151,14 @@
         <p>You can draw text like this:</p>
         <section class="code">
             <pre>
-            <code>// draws blue arial text</code>
-            <code>context.font = "32px arial";</code>
-            <code>context.fillStyle = "#0000ff";</code>
-            <code>context.fillText("Text", 300, 300);</code>
+        <code>// draws blue arial text</code>
+        <code>context.font = "32px arial";</code>
+        <code>context.fillStyle = "#0000ff";</code>
+        <code>context.fillText("Text", 300, 300);</code>
             </pre>
         </section>
         <p>
-            The <code>fillText</code> parameters in order are the text string, the x coordinate, and the y
+            The <code>fillText</code> parameters in order are: the text string, the x coordinate, and the y
             coordinate (you can also add an optional maximum width parameter, not used here).
         </p>
         <p>Here is what the browser screen now looks like:</p>
@@ -162,6 +168,9 @@
             their parameters, don't be afraid to look them up. There are other ways to draw as well, like using
             <code>canvas.strokeStyle</code> and <code>canvas.stroke()</code> to draw outlines of shapes or text, so you
             can explore those as well.
+        </p>
+        <p>
+            Clear all this code from the JS file. Next, we will begin drawing the game elements.
         </p>
         <p>
             <a href="https://github.com/abh-c/gameDemo1" target="_blank" rel="noopener">Lesson source code</a>
@@ -180,12 +189,12 @@
             <li><a href="js3.html">Lesson 2</a></li>
             <li><a href="js4.html">Lesson 3</a></li>
             <li><a href="js5.html">Lesson 4</a></li>
-            <li><a href="js6.html">Lesson 5</a></li>
-            <li><a href="js7.html">Lesson 6</a></li>
-            <li><a href="js8.html">Lesson 7</a></li>
-            <li><a href="js9.html">Lesson 8</a></li>
-            <li><a href="js10.html">Lesson 9</a></li>
-            <li><a href="js11.html">Lesson 10</a></li>
+            <li><a href="js6.html">Game 1</a></li>
+            <li><a href="js7.html">Game 2</a></li>
+            <li><a href="js8.html">Game 3</a></li>
+            <li><a href="js9.html">Game 4</a></li>
+            <li><a href="js10.html">Game 5</a></li>
+            <li><a href="js11.html">Game 6</a></li>
         </ul>
     </nav>
 
